# react-native-idk

./: .gitignore  .npmignore  .prettierrc  CONTRIBUTING.md  LICENSE  README.md  lefthook.yml  package.json  react-native-idk.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/idk/: IdkModule.java  IdkModule.kt  IdkPackage.java  IdkPackage.kt
android/src/newarch/: IdkSpec.kt
android/src/oldarch/: IdkSpec.kt
cpp/: react-native-idk.cpp  react-native-idk.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/idkexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: .xcode.env.local  File.swift  Podfile
example/ios/IdkExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/IdkExample.xcodeproj/: project.pbxproj
example/ios/IdkExample.xcodeproj/xcshareddata/xcschemes/: IdkExample.xcscheme
example/ios/IdkExample.xcworkspace/: contents.xcworkspacedata
example/ios/IdkExampleTests/: IdkExampleTests.m
example/src/: App.tsx
ios/: Idk.h  Idk.mm  MLModelHandler.h  MLModelHandler.m
scripts/: CheckONNX.py  ConvertToCoreMLFromONNX.py
src/: NativeIdk.ts  index.tsx
